[gd_scene load_steps=6 format=3 uid="uid://ca6p583nomxom"]

[ext_resource type="Script" path="res://game_controller.gd" id="1_vcpqr"]
[ext_resource type="PackedScene" uid="uid://crb2eiswehvl" path="res://rooms/prologue/prologue_forest_01/Prologue_forest_01.tscn" id="2_lu7x6"]
[ext_resource type="PackedScene" uid="uid://qrkrnqv83mlo" path="res://ui/hud/hud.tscn" id="3_eg36v"]
[ext_resource type="PackedScene" uid="uid://byucwlac08hca" path="res://ui/dialogue/dialogue_hud.tscn" id="3_gumqn"]
[ext_resource type="PackedScene" uid="uid://3ayqdowaichi" path="res://assets/ui/loading_screen.tscn" id="5_mlbqp"]

[node name="GameController" type="Node"]
script = ExtResource("1_vcpqr")

[node name="World2D" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Prologue_forest_01" parent="World2D" instance=ExtResource("2_lu7x6")]
unique_name_in_owner = true

[node name="HUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hud" parent="HUD" instance=ExtResource("3_eg36v")]

[node name="DialogueHud" parent="HUD" instance=ExtResource("3_gumqn")]
unique_name_in_owner = true

[node name="LoadingScreen" parent="." instance=ExtResource("5_mlbqp")]
unique_name_in_owner = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.884099, 0.884099, 0.884099, 1)
